# IpcShmChannel

./: CMakeLists.txt  README.md
include/: common.h
src/: IpcShmChannel.cpp  IpcShmChannel.h  main.cpp  test_channel.cpp  test_shm.cpp
src/unittest/: test_channel.cpp
